# lifelog-transcriber

./: .gitignore  README.md  main.py  merge_mp3files.py  pyproject.toml  query_llm.py
