[project]
name = "lifelog-transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.1",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "ipython>=8.0.0",
    "transformers>=4.51.3",
    "accelerate>=1.6.0",
    "torchaudio>=2.7.0",
    "punctuators==0.0.5",
    "pyannote-audio>=3.3.2",
    "diarizers",
    "huggingface-hub[cli]>=0.31.1",
    "pydub>=0.25.1",
    "noisereduce>=3.0.3",
    "soundfile>=0.13.1",
    "python-dotenv>=1.1.0",
    "google-genai>=1.14.0",
    ]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
diarizers = { git = "https://github.com/huggingface/diarizers.git" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
no-build-isolation-package = ["flash-attn"]
